# paneltime

./: .gitignore  CleanUpUsers.py  DB.py  DBCreate.py  DBIndicies.py  DBUpdater.py  DBparser.py  Equity.py  FileSync.py  FinalTables.py  Functions.py  Funds.py  MANIFEST.in  OSE.wpr  PW.py  README.md  README.rst  README.txt  WorkingTables.py  _config.yml  account_brsnd.py  account_orgID.py  account_parser.py  bills.py  cextension.cp311-win_amd64.pyd  cfunctions.cp37-win_amd64.pyd  cfunctions.cp38-win_amd64.pyd  csetup.py  download.py  factors_create.py  index.md  indexcalc.py  main.py  mysql.py  parserec.csv  profile.stats  pyproject.toml  sendmail.py  setup - Kopi.py  setup.cfg  (+5 more)
_includes/: attributes.md  options.md
doc/: attributes.html  example.py  hfunc.html  index.html  options.html  search.json
docs/: attributes.md  example.py  hfunc.md  loadwb.py  options.md
html/: attributes.html  hfunc.html  index.html  options.html  options.md  search.json
paneltime/: Regression_w5.wpr  Regression_w5.wpu  __init__.py  arguments.py  calculus.py  calculus_functions.py  calculus_ll.py  calculus_system.py  callback.py  cdef.cpp  cfunctions.c  cfunctions.cp35-win_amd64.pyd  cfunctions.cpp  cfunctions.exp  cfunctions.h  cfunctions.lib  cfunctions.sh  charts.py  communication.py  computation.py  constraints.py  ctesting.py  date_time.py  debug.py  dfpmax.py  direction.py  functions.py  gui.py  info.py  info.txt  linesearch.py  loaddata.py  loglikelihood.py  loglikelihood_II.py  loglikelihood_old.py  loglikelihood_system.py  main.py  maximize.py  (+37 more)
paneltime-1.0.1/: setup.py
(+196 files in other folders)
